--- a/New-Site/index.html
+++ b/New-Site/index.html
@@ -8,7 +8,7 @@
 
     <title>BilionBuck</title>
 
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="font-awesome-4.3.0/css/font-awesome.min.css">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400|Oswald|Kaushan+Script' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="main.css">
 
@@ -33,7 +33,8 @@
 
 <h2>What is the Dollar Dollar Club?</h2>
 <p>Hover below to see just how DDC works</p>
-<div class="container">
+    <div class="wrapper">
+    <div class="container">
     <div class="left box">
         <div class="pic">
             <i class="fa fa-money fa-lg"></i>
@@ -57,7 +58,7 @@
         <p>Try us once and you'll be hooked on your new crisp, minty bills. With our frequent collector program, every 10 months, you get one free!
         </p>
     </div>
-
+</div>
 
 </div>
 </div>
